<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".ui.login.LoginActivity">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/logo512"
                android:importantForAccessibility="no" />

        <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="64dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/logo">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/server_url_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@color/light_gray"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/server_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:hint="@string/login_hint_server_url"
                        android:inputType="textUri"
                        android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    android:layout_marginTop="8dp"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@color/light_gray"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:hint="@string/login_hint_email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:hintEnabled="true"
                    app:boxBackgroundColor="@color/light_gray"
                    app:boxBackgroundMode="filled"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:hint="@string/login_hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.qlarr.app.ui.common.LoadingButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="18sp"
                    android:text="@string/login_button_login"
                    app:loading_text="@string/login_button_login_loading" />

        </LinearLayout>


        <LinearLayout
                android:id="@+id/env_selector"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/login_form"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="32dp"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/use_hosted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to_private"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cornerRadius="8dp" />


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/try_guest_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_as_guest"
                    app:cornerRadius="8dp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>