<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/no_surveys_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/no_surveys_message"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/guestWarning"
        android:layout_width="match_parent"
        android:text="@string/guest_warning"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@android:color/holo_orange_dark"
        app:cardCornerRadius="0dp"
        app:cardElevation="8dp"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/guest_warning"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:padding="10dp" />
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guestWarning"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/fetching_surveys_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_10_percent"
        android:gravity="center"
        android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
        android:padding="32dp"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_white_rounded_corner"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/fetching_surveys_message" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/syncing_progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_10_percent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
        tools:visibility="visible">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_white_rounded_corner"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/syncing_survey_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Syncing All in One Survey" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/syncing_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:indeterminate="false" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sync_current_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="100 KB" />

                <TextView
                    android:id="@+id/sync_total_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="1.2 MB" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/syncing_survey_file_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                tools:text="Downloading 5/9" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>